Data sorting, headers, counts, links works This will server as a good Beta version

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -39,7 +39,7 @@
       "message": "Click to go to Google Calendar..."
    },
    "HEADER_DATE": {
-      "message": "$1.$2.($3)"
+      "message": "$1 $2 ($3)"
    },
    "JUMP_BACKWORD": {
       "message": "Previous Day"
